Migracion Estudiante agregada

--- a/Web APi crud/appsettings.json
+++ b/Web APi crud/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ADSDb;User Id=sa;Password=Admin123;Integrated Security=False;TrustServerCertificate=True;"
+  }
 }
