--- a/Web APi crud/appsettings.json
+++ b/Web APi crud/appsettings.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=ADSDb;User Id=sa;Password=Admin123;Integrated Security=False;TrustServerCertificate=True;"
-  }
+  },
+  "allowedOrigins": "*"
 }
